--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <hr/>
         <img src="./cat.png" alt="photo of a cat" height="200"/>
         <h2> Summary:</h2>
-        <p>Hello Visitors! My name is Vaidehiee Tyagi and I'm a student at GL Bajaj Institute of Technology and management in Greater nOida. I'm passionate about technology and thus i've taken a leap to learn more about web development.<br/>
+        <p>Hello Visitors! My name is VT and I'm a student. I'm passionate about technology and thus i've taken a leap to learn more about web development.<br/>
             I wish to become a web developer and am currently working towards that goal by learning about websites and everything works and how i can make one of my own. <br/>
         </p>
         <hr/>
@@ -18,8 +18,8 @@
         <h3>Educational Qualifications:</h3>
         <p>
             <ul>
-                <li>Bachelors from Banasthali Vidyapith in Journalism and Mass Communication</li>
-                <li>Currently pursuing Masters from GL Bajaj in Computer Applications</li>
+                <li>Bachelors in Journalism and Mass Communication</li>
+                <li>Currently pursuing Masters in Computer Applications</li>
             </ul>
         </p>
 
@@ -54,7 +54,7 @@
             </ol>
         </p>
         <footer>
-            <p>© 2024 Vaidehiee. All rights Reserved</p>
+            <p>© 2024 All rights Reserved</p>
         </footer>
     </body>
 </html>
